--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="utf-8">
     <title>nise-PSN</title>
     <link rel="stylesheet" href="stylesheet.css">
+    <meta name="viewpint"
+    content="width=device-width,initial-scale=1.0">
+    <link rel="stylesheet" href="responsive.css">
   </head>
 <body>
   <div class="sony">
