--- a/index.html
+++ b/index.html
@@ -160,19 +160,19 @@
   </div>
   <div class="psn_comtact">
     <div class="psn_content_center">
-      <div class="psn_time_of_service">
+      <div class="psn_time_of_service clear">
         <a href="http://legaldoc.dl.playstation.net/ps3-eula/psn/j/j_tosua_ja.html">
         <p>PSN利用規約</p></a>
       </div>
-      <div class="psn_privacy_policy">
+      <div class="psn_privacy_policy clear">
         <a href="http://legaldoc.dl.playstation.net/ps3-eula/psn/j/j_privacy_ja.html">
         <p>プライバシーポリシー</p></a>
       </div>
-      <div class="psn_about_psn">
+      <div class="psn_about_psn clear">
         <a href="http://legaldoc.dl.playstation.net/ps3-eula/psn/j/j_about_ja.html">
         <p>PlayStation Store について</p></a>
       </div>
-      <div class="psn_copyright">
+      <div class="psn_copyright clear">
         <a href="http://legaldoc.dl.playstation.net/ps3-eula/psn/i/i_copyright_ja.html">
         <p>著作権／商標について</p></a>
       </div>
